[package]
name = "save-me-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
regex = "1.9.1"
walkdir = "2.3.3"

[dev-dependencies]
tempfile = "3.7.0"
